# curl-mcp

./: .gitignore  README.md  curl.py  echo.py  mise.toml  pyproject.toml  test_client.py  test_oauth2_auto.py
