[project]
name = "curl-mcp"
version = "0.1.0"
description = "Simple MCP server for making HTTP requests"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "requests[socks]>=2.31.0",
    "requests-oauthlib>=1.3.1",
    "fastmcp>=2.2.10",
]

[project.scripts]
curl-mcp = "curl:main"

[tool.setuptools]
packages = []
py-modules = ["curl"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
