[project]
name = "curl-mcp"
version = "0.1.0"
description = "Simple MCP server for making HTTP requests"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx[socks]>=0.24.0",
    "fastmcp>=2.2.10",
    "aiohttp>=3.8.0",
]

[project.scripts]
curl-mcp = "curl:main"

[tool.setuptools]
packages = []
py-modules = ["curl"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipython>=8.36.0",
]
